# solana-utils

./: Cargo.toml  README.md  rustfmt.toml
crates/borsh-size/: Cargo.toml
crates/borsh-size/macro/: Cargo.toml
crates/borsh-size/macro/src/: ast.rs  expand.rs  lib.rs  props.rs  valid.rs
crates/borsh-size/src/: internal_macros.rs  lib.rs  utils.rs
crates/borsh-size/src/impls/: alloc.rs  core.rs  hashbrown.rs  mod.rs  solana_program.rs
crates/include-idl/: Cargo.toml
crates/include-idl/src/: lib.rs  parse.rs  shrink.rs
crates/security-txt/: Cargo.toml
crates/security-txt/src/: lib.rs
crates/security-txt/src/parse/: error.rs  mod.rs  print.rs
crates/solana-utils/: Cargo.toml  build.rs
crates/solana-utils/macro/: Cargo.toml
crates/solana-utils/macro/src/: ast.rs  lib.rs  variant_name.rs
crates/solana-utils/src/: account.rs  internal.rs  lib.rs  macros.rs  misc.rs  traits.rs
crates/solana-utils/src/invoke/: mod.rs  stable.rs
