[package]
name = "include-idl"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
shrink = ["flate2", "serde_json", "thiserror"]
parse = ["flate2", "goblin", "serde_json", "thiserror"]

[dependencies]
thiserror = { version = "1.0", optional = true }
flate2 = { version = "1.0", optional = true }
goblin = { version = "0.8.2", optional = true }
serde_json = { version = "1.0", optional = true, features = ["arbitrary_precision", "preserve_order"] }
