[package]
name = "security-txt"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
parse = ["memchr", "goblin"]

[dependencies]
memchr = { version = "2.7", optional = true }
goblin = { version = "0.8.2", optional = true }
