[package]
name = "security-txt"
version = "0.0.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
parse = ["memchr", "goblin"]

[dependencies]
memchr = { version = "2.7", optional = true }
goblin = { version = "0.9.2", optional = true }
