[package]
name = "solana-utils"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
solana-utils-macro = { version = "=0.0.1", path = "./macro" }

solana-program = { version = ">= 1.18, < 2.1", default-features = false }
