[package]
name = "solana-utils"
version = "0.0.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
solana-utils-macro = { version = "=0.0.2", path = "./macro" }

solana-program = { version = ">= 1.18, < 2.2", default-features = false }
