[package]
name = "borsh-size-macro"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
proc-macro2-diagnostics = "0.10.1"
syn = "2.0.72"
quote = "1.0.36"
