[package]
name = "solana-utils-macro"
version = "0.0.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
syn = "2.0.87"
quote = "1.0.37"
